--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,5 +17,10 @@
         <a href="/boards/new">게시글 등록</a>
         <a href="/boards">게시글 목록</a>
     </p>
+    <p class="lead">로그인</p>
+    <p>
+        <a href="/login">로그인</a>
+        <a href="/logout">로그아웃</a>
+    </p>
 </body>
 </html>
