PostController, front, login

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,8 +14,8 @@
     </p>
     <p class="lead">게시글</p>
     <p>
-        <a href="/boards/new">게시글 등록</a>
-        <a href="/boards">게시글 목록</a>
+        <a href="/posts/new">게시글 등록</a>
+        <a href="/posts">게시글 목록</a>
     </p>
     <p class="lead">로그인</p>
     <p>
