--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -16,5 +16,15 @@
             <button type="submit">로그아웃</button>
         </form>
     </div>
+    <h1>BOARD</h1>
+    <p>회원 기능</p>
+    <p>
+        <a href="/members">회원 목록</a>
+    </p>
+    <p class="lead">게시글</p>
+    <p>
+        <a href="/posts/new">게시글 등록</a>
+        <a href="/posts">게시글 목록</a>
+    </p>
 </div>
 </body>
