--- a/src/main/resources/templates/posts/postList.html
+++ b/src/main/resources/templates/posts/postList.html
@@ -10,12 +10,10 @@
     <thead>
     <tr>
         <th>#</th>
-        <th>Id</th>
-        <th>비밀번호</th>
         <th>닉네임</th>
-        <th>이름</th>
-        <th>주소</th>
-        <th>주민번호</th>
+        <th>제목</th>
+        <th>내용</th>
+        <th>수정일자</th>
         <br>
     </tr>
     </thead>
