--- a/src/main/resources/templates/members/memberList.html
+++ b/src/main/resources/templates/members/memberList.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div>
+<div th:replace="layout/top::header"></div>
     <thead>
     <tr>
         <th>#</th>
@@ -28,7 +28,7 @@
         <td th:text="${member.address}"></td>
         <td th:text="${member.birthday}"></td>
         <td>
-            <a href="#" th:href="@{/members/{id}/edit (id=${member.id})}" th:if="${member.id == session.loginMember.id}" role="button">수정</a>
+<!--            <a href="#" th:href="@{/members/{id}/edit (id=${member.id})}" th:if="${member.id == session.loginMember.id}" role="button">수정</a>-->
         </td>
         <br>
     </tr>
