--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -7,7 +7,7 @@
 <body>
 <h2>홈화면</h2>
 <div>
-    <h4 th:text="|로그인: ${member.name}|">로그인 사용자 이름</h4>
+    <h4 th:text="|로그인: ${member.nickName}|">로그인 사용자 이름</h4>
     <div>
         <form th:action="@{/logout}" method="post">
             <button type="submit">로그아웃</button>
