--- a/src/main/resources/templates/posts/updatePostForm.html
+++ b/src/main/resources/templates/posts/updatePostForm.html
@@ -3,7 +3,7 @@
 <head>
 <body>
 
-<div class="container">
+<div th:replace="layout/top::header"></div>
 
     <form th:object="${form}" method="post">
         <!-- id -->
